# dex-python

./: .env.example  .gitallowed  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLEXITY_IMPROVEMENTS.md  CONTINUITY.md  CONTRIBUTING.md  DEDUPLICATION_PLAN.md  LICENSE  Makefile  PLAN.md  README.md  RENAME_PLAN.md  SCHEMA_ERD.md  SECURITY.md  SECURITY_AUDIT.md  alembic.ini  analyze_duplicates.py  flag_duplicates.py  main.py  pyproject.toml  resolve_duplicates.py  review_duplicates.py  roadmap.md  sync_with_integrity.py
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
alembic/: env.py
alembic/versions/: af970266ed45_initial_schema.py
docs/: PERFORMANCE.md  api.md  architecture.md  getting-started.md  name-parsing.md
docs/dex_api_docs/: 01_authentication.md  02_deduplicate_notes.md  03_contacts_get.md  04_contacts_post.md  05_contacts_put.md  06_contacts_delete.md  07_reminders_get.md  08_reminders_post.md  09_reminders_put.md  10_reminders_delete.md  11_notes_get.md  12_notes_post.md  13_notes_put.md  14_notes_delete.md  README.md
docs/planning/: deduplication.md  roadmap.md  schema-erd.md
output/: README.md
scripts/: analyze_duplicates.py  backfill_company.py  flag_duplicates.py  main.py  resolve_duplicates.py  review_duplicates.py  sync_enrichment_back.py  sync_with_integrity.py
src/dex_import/: __init__.py  async_client.py  client.py  config.py  deduplication.py  exceptions.py  models.py
src/dex_python/: __init__.py  async_client.py  client.py  client_utils.py  config.py  deduplication.py  enrichment.py  error_handler.py  exceptions.py  fingerprint.py  models.py  name_parsing.py  sync_back.py
src/dex_python/cli/: __init__.py  common.py  duplicate.py  enrichment.py  sync.py
src/dex_python/db/: __init__.py  models.py  session.py
tests/: TEST_COVERAGE_SUMMARY.md  __init__.py  conftest.py  fake_data.py  helpers.py  test_async_client.py  test_async_retry.py  test_client.py  test_deduplication.py  test_exceptions.py  test_integration.py  test_models.py  test_retry.py  test_sync_integrity.py
tests/integration/: test_live_api.py
tests/unit/: test_async_retry.py  test_client_utils.py  test_clients.py  test_config.py  test_enrichment.py  test_error_handler.py  test_exceptions.py  test_fingerprint.py  test_fingerprint_edge_cases.py  test_main_sync.py  test_models.py  test_name_parsing.py  test_normalized_returns.py  test_paginated.py  test_performance.py  test_retry.py  test_sync_back.py  test_sync_integrity.py
tests/unit/cli/: test_cli_main.py  test_common.py
tests/unit/db/: test_models.py  test_session.py
(+11 files in other folders)
