[project]
name = "dex-python"
version = "0.1.0"
description = "Python SDK for the Dex CRM API"
authors = [
    { name = "Dominic Fahey", email = "domfahey@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "jellyfish>=1.2.1",
    "networkx>=3.6.1",
    "probablepeople>=0.5.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=14.2.0",
    "unidecode>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = [
    "integration: tests that hit the live Dex API",
]

[dependency-groups]
dev = [
    "faker>=39.0.0",
    "mypy>=1.19.1",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.36.0",
    "types-networkx>=3.6.1.20251220",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dex_python*"]

[tool.mypy]
packages = ["dex_python"]
mypy_path = "src"
